fixed gaps

--- a/src/components/Todos/Todos.scss
+++ b/src/components/Todos/Todos.scss
@@ -30,7 +30,7 @@
     justify-content: flex-start;
     flex-direction: column;
     width: 100%;
-    gap: 1rem;
+    gap: 2rem;
 
     &__inputs {
       display: flex;
